<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".functions.GoogleLensActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="388dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/black"
                        android:gravity="center_horizontal"
                        android:text="@string/image"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp">

                    </TextView>

                    <ImageView
                        android:id="@+id/ImageViewpre"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:src="@drawable/imageadjustment"
                        android:background="@color/white"
                        android:hint="@string/image_preview"
                        android:maxHeight="500dp"
                        android:textColorHint="#5A5959" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="13dp"
                app:cardElevation="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/black"
                        android:gravity="center_horizontal"
                        android:text="@string/text_from_image"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp">

                    </TextView>

                    <EditText
                        android:id="@+id/resultedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:gravity="center"
                        android:background="@color/black"
                        android:padding="5dp"
                        android:hint="@string/text_will_appear_here"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="#E8DEDE"
                        android:textSize="15sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="225dp"
        android:layout_height="64dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="#000"
        android:text="@string/search"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>